# multi-theory-consciousness

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VERSION_HISTORY.md  pyproject.toml  requirements.txt
data/dcm/: bundled_spec.json
data/dcm/baselines/: README.txt  chicken.json  eliza.json  human.json  llm_2024.json
docs/: ARCHITECTURE.md  CONSCIOUSNESS_THEORIES.md  GETTING_STARTED.md  HONEST_LIMITATIONS.md
docs/plans/: 2026-03-18-v0.2.0-release.md
docs/specs/: 2026-03-18-v0.2.0-release-design.md
examples/: basic_assessment.py  multi_theory_pipeline.py  neural_substrates.py  single_theory.py
mtc/: __init__.py
mtc/assessment/: __init__.py  assessment.py  causal_emergence.py  dcm_benchmark.py  dcm_evaluator.py  dcm_scoring.py  framework.py  rpt_measurement.py
mtc/consciousness/: __init__.py  active_inference.py  attention_schema.py  consciousness_integration.py  consciousness_metrics.py  conversation_coherence.py  enhanced_global_workspace.py  global_workspace.py  metacognition.py  pad_affect.py
mtc/consciousness/beautiful_loop/: __init__.py  bayesian_binding.py  epistemic_depth.py  hyper_model.py
mtc/consciousness/damasio/: __init__.py  core_consciousness.py  extended_consciousness.py  protoself.py
mtc/core/: __init__.py  circuit_breaker.py  config.py
mtc/neural/: __init__.py  base_interfaces.py  gpu_integration.py  memory_pool.py  mps_utils.py  orchestrator.py  oscillatory_binding.py
mtc/neural/htm/: __init__.py  htm_core.py  production_htm.py
mtc/neural/liquid/: __init__.py  lsm_core.py  production_lsm.py
mtc/neural/protocols/: __init__.py  message_format.py  routing.py  serialization.py  synchronization.py
mtc/neural/spiking/: __init__.py  production_snn.py  snn_core.py  snn_core_optimized.py
mtc/neural/vectors/: __init__.py  coordinator.py
paper/: references.bib
paper/appendices/: appendix_a_indicators.md  appendix_b_file_index.md  appendix_c_file_index.md  appendix_c_output.md  appendix_d_output.md
paper/figures/: architecture_diagrams.html
paper/latex/: main.tex  references.bib
paper/latex/appendices/: appendix_a_indicators.tex  appendix_b_file_index.tex  appendix_c_output.tex
paper/latex/figures/: fig1_architecture.tex  fig2_cycle_dataflow.tex  fig3_cross_theory.tex
paper/latex/sections/: abstract.tex  acknowledgments.tex  architecture.tex  assessment.tex  background.tex  conclusion.tex  discussion.tex  future_work.tex  implementation.tex  introduction.tex  limitations.tex  results.tex
paper/sections/: 00_abstract.md  01_introduction.md  02_background.md  03_architecture.md  04_implementation.md  05_assessment.md  06_results.md  07_limitations.md  08_discussion.md  09_future_work.md  10_conclusion.md  11_acknowledgments.md
scripts/: run_assessment.py
tests/assessment/: test_causal_emergence.py  test_dcm_benchmark.py  test_dcm_evaluator.py
tests/consciousness/: test_active_inference.py  test_assessment.py  test_assessment_upgrade.py  test_attention_schema.py  test_beautiful_loop.py  test_damasio.py  test_enhanced_global_workspace.py  test_indicator_normalization.py  test_metacognition.py  test_pad_affect.py
tests/core/: test_circuit_breaker.py
tests/neural/: test_oscillatory_binding.py  test_production_htm.py  test_production_lsm.py  test_production_snn.py
